// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./docs/.vuepress/components/demo/date-picker/basic.vue correctly 1`] = `
<div class="nova-date-picker">
  <div class="nova-date-picker-toggle">
    <div class="nova-date-picker-inner"><input placeholder="请选择日期" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
  </div>
</div>
`;

exports[`renders ./docs/.vuepress/components/demo/date-picker/disabled.vue correctly 1`] = `
<section>
  <div class="nova-date-picker">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner is-disabled"><input disabled="disabled" placeholder="请选择日期" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
    </div>
  </div>
  <div class="nova-date-picker nova-date-picker-range">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner nova-date-picker-range-start is-disabled"><input disabled="disabled" placeholder="开始日期" value="2000-01-01" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
      <div class="nova-date-picker-inner nova-date-picker-range-end is-disabled"><input disabled="disabled" placeholder="结束日期" value="2000-01-01" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
    </div>
  </div>
  <div class="nova-date-picker nova-date-picker-range">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner nova-date-picker-range-start"><input placeholder="开始日期" value="2000-01-01" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
      <div class="nova-date-picker-inner nova-date-picker-range-end is-disabled"><input disabled="disabled" placeholder="结束日期" value="2000-01-01" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
    </div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/date-picker/disabled-date.vue correctly 1`] = `
<section>
  <div class="nova-date-picker">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner"><input placeholder="请选择日期" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
    </div>
  </div>
  <div class="nova-date-picker nova-date-picker-range">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner nova-date-picker-range-start"><input placeholder="开始日期" value="" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
      <div class="nova-date-picker-inner nova-date-picker-range-end"><input placeholder="结束日期" value="" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
    </div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/date-picker/format.vue correctly 1`] = `
<section>
  <div class="nova-date-picker">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner"><input placeholder="Select date" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
    </div>
  </div>
  <div class="nova-date-picker nova-date-picker-range">
    <div class="nova-date-picker-toggle">
      <div class="nova-date-picker-inner nova-date-picker-range-start"><input placeholder="开始日期" value="2000年 1月 1日" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
      <div class="nova-date-picker-inner nova-date-picker-range-end"><input placeholder="结束日期" value="2000年 1月 1日" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
    </div>
  </div>
</section>
`;

exports[`renders ./docs/.vuepress/components/demo/date-picker/range.vue correctly 1`] = `
<div class="nova-date-picker nova-date-picker-range">
  <div class="nova-date-picker-toggle">
    <div class="nova-date-picker-inner nova-date-picker-range-start"><input placeholder="开始日期" value="" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
    <div class="nova-date-picker-inner nova-date-picker-range-end"><input placeholder="结束日期" value="" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"><span class="nova-date-picker-icon"></span></div>
  </div>
</div>
`;
